--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.17.9",
-    "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.5",
     "react": "^18.0.0",
@@ -43,5 +42,10 @@
   "bugs": {
     "url": "https://github.com/jacksondooley/Jamazon/issues"
   },
-  "homepage": "https://github.com/jacksondooley/Jamazon#readme"
+  "homepage": "https://github.com/jacksondooley/Jamazon#readme",
+  "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/runtime": "^7.17.9"
+  }
 }
